--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,1 @@
-{
-  "builds": [
-    { "src": "index.html", "use": "@vercel/static" },
-    { "src": "tokens.css", "use": "@vercel/static" },
-    { "src": "styles.css", "use": "@vercel/static" },
-    { "src": "app.js", "use": "@vercel/static" },
-    { "src": "links.js", "use": "@vercel/static" },
-    { "src": "links.json", "use": "@vercel/static" },
-    { "src": "prompts.json", "use": "@vercel/static" },
-    { "src": "components/**", "use": "@vercel/static" },
-    { "src": "public/**", "use": "@vercel/static" },
-    { "src": "fabric-palette/**", "use": "@vercel/static" }
-  ]
-}
+{"builds":[{"src":"index.html","use":"@vercel/static"},{"src":"tokens.css","use":"@vercel/static"},{"src":"styles.css","use":"@vercel/static"},{"src":"app.js","use":"@vercel/static"},{"src":"links.js","use":"@vercel/static"},{"src":"links.json","use":"@vercel/static"},{"src":"prompts.json","use":"@vercel/static"},{"src":"components/**","use":"@vercel/static"},{"src":"public/**","use":"@vercel/static"},{"src":"fabric-palette/**","use":"@vercel/static"},{"src":"fabric-colorizer/**","use":"@vercel/static"}]}
